src/test/deca/codegen/valid/created/testOpArith/minus.deca
// Description :
//    Test de l'opération de soustraction
//
// Résultats :
//    -1


{
    int sub = 1 - 2;
}


