src/test/deca/codegen/invalid/created/testOpArith/minusOverFlow.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 12: Error: Overflow during arithmetic operation
// 


{
    int alpha  = -2147483647; 
    int gamma = alpha-2 ;
}